--- a/LLM/2_calculate_acc.ipynb
+++ b/LLM/2_calculate_acc.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
       "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_4.csv\n",
       "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_8.csv\n",
       "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_2.csv\n",
-      "l_result_4_10_Y :  79.36507936507937\n"
+      "l_result_4_10_Y :  81.35593220338984\n"
      ]
     }
    ],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_7.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_5.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_8.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_0.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_1.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_6.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_3.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_4.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_2.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver5_9.csv\n",
+      "l_result_4_10_Y :  91.80327868852459\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
+    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -507,19 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_0.csv\n",
-      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_1.csv\n",
-      "l_result_4_10_Y :  86.66666666666667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
     "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver1')"
@@ -527,20 +545,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80.46286058927058"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.mean(acc_list)"
    ]
@@ -596,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,22 +654,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_result_1_10_Y :  66.0\n",
-      "l_result_2_10_Y :  56.00000000000001\n",
-      "l_result_3_10_Y :  56.00000000000001\n",
-      "l_result_1_10_N :  59.0\n",
-      "l_result_2_10_N :  59.0\n",
-      "l_result_3_10_N :  51.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt1')\n",
     "calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt1')\n",
@@ -683,22 +677,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_result_1_10_Y :  60.0\n",
-      "l_result_2_10_Y :  68.0\n",
-      "l_result_3_10_Y :  69.0\n",
-      "l_result_1_10_N :  64.0\n",
-      "l_result_2_10_N :  63.0\n",
-      "l_result_3_10_N :  64.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt2')\n",
     "calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt2')\n",
@@ -726,22 +707,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_result_1_10_Y :  64.0\n",
-      "l_result_2_10_Y :  60.0\n",
-      "l_result_3_10_Y :  64.0\n",
-      "l_result_1_10_N :  60.0\n",
-      "l_result_2_10_N :  60.0\n",
-      "l_result_3_10_N :  63.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt3')\n",
     "calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt3')\n",
@@ -762,22 +730,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_result_1_10_Y :  61.0\n",
-      "l_result_2_10_Y :  65.0\n",
-      "l_result_3_10_Y :  67.0\n",
-      "l_result_1_10_N :  65.0\n",
-      "l_result_2_10_N :  70.0\n",
-      "l_result_3_10_N :  66.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt4')\n",
     "calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt4')\n",
@@ -798,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,28 +782,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_l_result_1_10_Y_2_sys_prompt4.csv', 'sc_l_result_1_10_Y_3_sys_prompt4.csv', 'sc_l_result_1_10_Y_4_sys_prompt4.csv', 'sc_l_result_1_10_Y_0_sys_prompt4.csv', 'sc_l_result_1_10_Y_1_sys_prompt4.csv']\n",
-      "l_result_1_10_Y :  66.0\n",
-      "['sc_l_result_2_10_Y_16_sys_prompt4.csv', 'sc_l_result_2_10_Y_4_sys_prompt4.csv', 'sc_l_result_2_10_Y_6_sys_prompt4.csv', 'sc_l_result_2_10_Y_1_sys_prompt4.csv', 'sc_l_result_2_10_Y_2_sys_prompt4.csv', 'sc_l_result_2_10_Y_14_sys_prompt4.csv', 'sc_l_result_2_10_Y_17_sys_prompt4.csv', 'sc_l_result_2_10_Y_15_sys_prompt4.csv', 'sc_l_result_2_10_Y_3_sys_prompt4.csv', 'sc_l_result_2_10_Y_0_sys_prompt4.csv', 'sc_l_result_2_10_Y_7_sys_prompt4.csv', 'sc_l_result_2_10_Y_19_sys_prompt4.csv', 'sc_l_result_2_10_Y_5_sys_prompt4.csv', 'sc_l_result_2_10_Y_8_sys_prompt4.csv', 'sc_l_result_2_10_Y_13_sys_prompt4.csv', 'sc_l_result_2_10_Y_9_sys_prompt4.csv', 'sc_l_result_2_10_Y_11_sys_prompt4.csv', 'sc_l_result_2_10_Y_10_sys_prompt4.csv', 'sc_l_result_2_10_Y_18_sys_prompt4.csv', 'sc_l_result_2_10_Y_12_sys_prompt4.csv']\n",
-      "l_result_2_10_Y :  73.0\n",
-      "['sc_l_result_3_10_Y_1_sys_prompt4.csv', 'sc_l_result_3_10_Y_0_sys_prompt4.csv', 'sc_l_result_3_10_Y_3_sys_prompt4.csv', 'sc_l_result_3_10_Y_2_sys_prompt4.csv']\n",
-      "l_result_3_10_Y :  67.5\n",
-      "['sc_l_result_1_10_N_2_sys_prompt4.csv', 'sc_l_result_1_10_N_0_sys_prompt4.csv', 'sc_l_result_1_10_N_4_sys_prompt4.csv', 'sc_l_result_1_10_N_1_sys_prompt4.csv', 'sc_l_result_1_10_N_3_sys_prompt4.csv']\n",
-      "l_result_1_10_N :  70.0\n",
-      "['sc_l_result_2_10_N_3_sys_prompt4.csv', 'sc_l_result_2_10_N_1_sys_prompt4.csv', 'sc_l_result_2_10_N_2_sys_prompt4.csv', 'sc_l_result_2_10_N_0_sys_prompt4.csv']\n",
-      "l_result_2_10_N :  62.5\n",
-      "['sc_l_result_3_10_N_0_sys_prompt4.csv', 'sc_l_result_3_10_N_1_sys_prompt4.csv', 'sc_l_result_3_10_N_2_sys_prompt4.csv']\n",
-      "l_result_3_10_N :  66.66666666666666\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc_calc_acc_condition('l' , 1, 10, 'Y', 'sys_prompt4')\n",
     "sc_calc_acc_condition('l' , 2, 10, 'Y', 'sys_prompt4') # temperature 0.2\n",
@@ -861,28 +797,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_l_result_1_5_Y_5_sys_prompt4.csv', 'sc_l_result_1_5_Y_8_sys_prompt4.csv', 'sc_l_result_1_5_Y_9_sys_prompt4.csv', 'sc_l_result_1_5_Y_6_sys_prompt4.csv', 'sc_l_result_1_5_Y_4_sys_prompt4.csv', 'sc_l_result_1_5_Y_2_sys_prompt4.csv', 'sc_l_result_1_5_Y_7_sys_prompt4.csv', 'sc_l_result_1_5_Y_1_sys_prompt4.csv', 'sc_l_result_1_5_Y_0_sys_prompt4.csv', 'sc_l_result_1_5_Y_3_sys_prompt4.csv']\n",
-      "l_result_1_5_Y :  72.0\n",
-      "['sc_l_result_2_5_Y_5_sys_prompt4.csv', 'sc_l_result_2_5_Y_6_sys_prompt4.csv', 'sc_l_result_2_5_Y_3_sys_prompt4.csv', 'sc_l_result_2_5_Y_1_sys_prompt4.csv', 'sc_l_result_2_5_Y_4_sys_prompt4.csv', 'sc_l_result_2_5_Y_2_sys_prompt4.csv', 'sc_l_result_2_5_Y_0_sys_prompt4.csv']\n",
-      "l_result_2_5_Y :  82.85714285714286\n",
-      "['sc_l_result_3_5_Y_3_sys_prompt4.csv', 'sc_l_result_3_5_Y_6_sys_prompt4.csv', 'sc_l_result_3_5_Y_4_sys_prompt4.csv', 'sc_l_result_3_5_Y_5_sys_prompt4.csv', 'sc_l_result_3_5_Y_0_sys_prompt4.csv', 'sc_l_result_3_5_Y_2_sys_prompt4.csv', 'sc_l_result_3_5_Y_1_sys_prompt4.csv']\n",
-      "l_result_3_5_Y :  80.0\n",
-      "['sc_l_result_1_5_N_8_sys_prompt4.csv', 'sc_l_result_1_5_N_1_sys_prompt4.csv', 'sc_l_result_1_5_N_0_sys_prompt4.csv', 'sc_l_result_1_5_N_6_sys_prompt4.csv', 'sc_l_result_1_5_N_4_sys_prompt4.csv', 'sc_l_result_1_5_N_5_sys_prompt4.csv', 'sc_l_result_1_5_N_7_sys_prompt4.csv', 'sc_l_result_1_5_N_3_sys_prompt4.csv', 'sc_l_result_1_5_N_2_sys_prompt4.csv']\n",
-      "l_result_1_5_N :  77.77777777777779\n",
-      "['sc_l_result_2_5_N_0_sys_prompt4.csv', 'sc_l_result_2_5_N_3_sys_prompt4.csv', 'sc_l_result_2_5_N_6_sys_prompt4.csv', 'sc_l_result_2_5_N_4_sys_prompt4.csv', 'sc_l_result_2_5_N_5_sys_prompt4.csv', 'sc_l_result_2_5_N_2_sys_prompt4.csv', 'sc_l_result_2_5_N_1_sys_prompt4.csv']\n",
-      "l_result_2_5_N :  80.0\n",
-      "['sc_l_result_3_5_N_0_sys_prompt4.csv', 'sc_l_result_3_5_N_4_sys_prompt4.csv', 'sc_l_result_3_5_N_5_sys_prompt4.csv', 'sc_l_result_3_5_N_1_sys_prompt4.csv', 'sc_l_result_3_5_N_2_sys_prompt4.csv', 'sc_l_result_3_5_N_3_sys_prompt4.csv']\n",
-      "l_result_3_5_N :  83.33333333333334\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc_calc_acc_condition('l' , 1, 5, 'Y', 'sys_prompt4')\n",
     "sc_calc_acc_condition('l' , 2, 5, 'Y', 'sys_prompt4')\n",
@@ -898,20 +815,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_l_result_2_5_Y_2_sys_prompt5.csv', 'sc_l_result_2_5_Y_4_sys_prompt5.csv', 'sc_l_result_2_5_Y_3_sys_prompt5.csv', 'sc_l_result_2_5_Y_0_sys_prompt5.csv', 'sc_l_result_2_5_Y_1_sys_prompt5.csv']\n",
-      "l_result_2_5_Y :  52.0\n",
-      "['sc_l_result_2_5_N_0_sys_prompt5.csv', 'sc_l_result_2_5_N_4_sys_prompt5.csv', 'sc_l_result_2_5_N_3_sys_prompt5.csv', 'sc_l_result_2_5_N_2_sys_prompt5.csv', 'sc_l_result_2_5_N_1_sys_prompt5.csv']\n",
-      "l_result_2_5_N :  48.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "sc_calc_acc_condition('l' , 2, 5, 'Y', 'sys_prompt5')\n",
@@ -920,18 +826,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_c_result_2_10_Y_2_sys_prompt4.csv', 'sc_c_result_2_10_Y_7_sys_prompt4.csv', 'sc_c_result_2_10_Y_8_sys_prompt4.csv', 'sc_c_result_2_10_Y_4_sys_prompt4.csv', 'sc_c_result_2_10_Y_6_sys_prompt4.csv', 'sc_c_result_2_10_Y_9_sys_prompt4.csv', 'sc_c_result_2_10_Y_5_sys_prompt4.csv', 'sc_c_result_2_10_Y_3_sys_prompt4.csv', 'sc_c_result_2_10_Y_1_sys_prompt4.csv', 'sc_c_result_2_10_Y_0_sys_prompt4.csv']\n",
-      "c_result_2_10_Y :  56.00000000000001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "sc_calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt4')\n",
@@ -940,18 +837,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_c_result_2_10_Y_4_sys_prompt7.csv', 'sc_c_result_2_10_Y_0_sys_prompt7.csv', 'sc_c_result_2_10_Y_3_sys_prompt7.csv', 'sc_c_result_2_10_Y_1_sys_prompt7.csv', 'sc_c_result_2_10_Y_5_sys_prompt7.csv', 'sc_c_result_2_10_Y_2_sys_prompt7.csv']\n",
-      "c_result_2_10_Y :  56.666666666666664\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc_calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt7')\n",
     "sc_calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt7')\n"
@@ -959,18 +847,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_l_result_2_10_Y_1_sys_prompt7.csv', 'sc_l_result_2_10_Y_6_sys_prompt7.csv', 'sc_l_result_2_10_Y_0_sys_prompt7.csv', 'sc_l_result_2_10_Y_7_sys_prompt7.csv', 'sc_l_result_2_10_Y_8_sys_prompt7.csv', 'sc_l_result_2_10_Y_5_sys_prompt7.csv', 'sc_l_result_2_10_Y_9_sys_prompt7.csv', 'sc_l_result_2_10_Y_2_sys_prompt7.csv', 'sc_l_result_2_10_Y_4_sys_prompt7.csv', 'sc_l_result_2_10_Y_3_sys_prompt7.csv']\n",
-      "l_result_2_10_Y :  60.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "sc_calc_acc_condition('l' , 2, 10, 'Y', 'sys_prompt7')\n",
@@ -979,18 +858,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sc_l_result_4_10_Y_1_sys_prompt7.csv', 'sc_l_result_4_10_Y_8_sys_prompt7.csv', 'sc_l_result_4_10_Y_9_sys_prompt7.csv', 'sc_l_result_4_10_Y_0_sys_prompt7.csv', 'sc_l_result_4_10_Y_6_sys_prompt7.csv', 'sc_l_result_4_10_Y_7_sys_prompt7.csv', 'sc_l_result_4_10_Y_3_sys_prompt7.csv', 'sc_l_result_4_10_Y_2_sys_prompt7.csv', 'sc_l_result_4_10_Y_5_sys_prompt7.csv', 'sc_l_result_4_10_Y_4_sys_prompt7.csv']\n",
-      "l_result_4_10_Y :  69.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "sc_calc_acc_condition('l' , 4, 10, 'Y', 'sys_prompt7')\n",
@@ -999,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,93 +898,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sc_l_result_2_10_Y_14_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_6_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_2_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_17_sys_prompt4_0.csv\n",
-      "50.0\n",
-      "sc_l_result_2_10_Y_12_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_5_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_4_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_0_sys_prompt4_0.csv\n",
-      "90.0\n",
-      "sc_l_result_2_10_Y_8_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_10_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_15_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_9_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_13_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_3_sys_prompt4_0.csv\n",
-      "50.0\n",
-      "sc_l_result_2_10_Y_11_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_19_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_16_sys_prompt4_0.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_7_sys_prompt4_0.csv\n",
-      "80.0\n",
-      "sc_l_result_2_10_Y_18_sys_prompt4_0.csv\n",
-      "50.0\n",
-      "sc_l_result_2_10_Y_1_sys_prompt4_0.csv\n",
-      "60.0\n",
-      "l_result_2_10_Y :  64.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc_calc_acc_condition_with_temp('l', 2, 10, 'Y','sys_prompt4', 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sc_l_result_2_10_Y_14_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_6_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_2_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_17_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_12_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_5_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_4_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_0_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_8_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_10_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_15_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_9_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_13_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_3_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_11_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_19_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_16_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_7_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_18_sys_prompt4_0.csv\n",
-      "sc_l_result_2_10_Y_1_sys_prompt4_0.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm_model, few_shot_n,test_n, q_src_yn, p_ver, temp = 'l',2, 10, 'Y','sys_prompt4', 0\n",
     "opt_file = [x for x in file_list if x.startswith(f'sc_{llm_model}_result_{few_shot_n}_{test_n}_{q_src_yn}')]\n",
@@ -1136,27 +931,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sc_l_result_2_10_Y_3_sys_prompt4_0.5.csv\n",
-      "40.0\n",
-      "sc_l_result_2_10_Y_4_sys_prompt4_0.5.csv\n",
-      "60.0\n",
-      "sc_l_result_2_10_Y_2_sys_prompt4_0.5.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_1_sys_prompt4_0.5.csv\n",
-      "70.0\n",
-      "sc_l_result_2_10_Y_0_sys_prompt4_0.5.csv\n",
-      "50.0\n",
-      "l_result_2_10_Y :  57.99999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc_calc_acc_condition_with_temp('l', 2, 10, 'Y','sys_prompt4', 0.5)"
    ]
