--- a/LLM/2_calculate_acc.ipynb
+++ b/LLM/2_calculate_acc.ipynb
@@ -20,29 +20,30 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from sklearn import metrics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '.result'\n",
+    "path = './result'\n",
     "file_list = os.listdir(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp = pd.DataFrame()\n",
-    "df_eval = pd.DataFrame()\n",
-    "acc_list = []\n",
     "def sc_calc_acc_condition_with_temp_with_sc(llm_model, few_shot_n, test_n, q_src_yn, ver, p_ver, sc_num, temp, excel_ver):\n",
+    "    tmp = pd.DataFrame()\n",
+    "    df_eval = pd.DataFrame()\n",
+    "    acc_list = []\n",
     "    path = './result'\n",
     "    # ./result/sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_0.csv\n",
     "    file_list = os.listdir(path)\n",
@@ -51,14 +52,9 @@
     "\n",
     "    df = pd.DataFrame()\n",
     "\n",
-    "\n",
-    "    # pattern = re.compile(r'.*_[0-9]\\.csv$')\n",
-    "    # opt_file = [x for x in opt_file if pattern.match(x)]\n",
-    "    \n",
     "    \n",
     "    if len(opt_file)>0 : \n",
     "        for f in opt_file:\n",
-    "            print(f)\n",
     "            tmp = pd.read_csv(f'{path}/{f}', index_col =0)\n",
     "            tmp = tmp.dropna()\n",
     "\n",
@@ -80,89 +76,167 @@
     "            df = pd.concat([df, df_eval], axis =0)\n",
     "            \n",
     "        df['equal_yn'] = np.where(df['gold']==df['o_result'], 1, 0)\n",
+    "        y_true = df['o_result']\n",
+    "        y_pred = df['gold']\n",
+    "        print(metrics.classification_report(y_true, y_pred, digits=3))\n",
+    "        \n",
     "        acc = (df['equal_yn'].sum()/df.shape[0])*100            \n",
-    "        print(f'{llm_model}_result_{few_shot_n}_{test_n}_{q_src_yn} : ', acc)\n"
+    "        print(f'{llm_model}_result_{few_shot_n}_{test_n}_{q_src_yn} : ', acc)\n",
+    "        return acc_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.779     0.813     0.796       563\n",
+      "           1      0.841     0.877     0.859      1111\n",
+      "           2      0.962     0.714     0.820       280\n",
+      "\n",
+      "    accuracy                          0.835      1954\n",
+      "   macro avg      0.861     0.801     0.825      1954\n",
+      "weighted avg      0.840     0.835     0.835      1954\n",
+      "\n",
+      "l_result_4_30_Y :  83.52098259979529\n",
+      "[np.float64(78.94736842105263), np.float64(84.0), np.float64(86.66666666666667), np.float64(90.0), np.float64(72.72727272727273), np.float64(81.25), np.float64(85.71428571428571), np.float64(86.66666666666667), np.float64(90.0), np.float64(83.33333333333334), np.float64(82.35294117647058), np.float64(90.0), np.float64(91.30434782608695), np.float64(68.42105263157895), np.float64(72.22222222222221), np.float64(83.33333333333334), np.float64(86.66666666666667), np.float64(100.0), np.float64(90.47619047619048), np.float64(80.0), np.float64(90.47619047619048), np.float64(77.27272727272727), np.float64(85.71428571428571), np.float64(84.61538461538461), np.float64(77.27272727272727), np.float64(91.66666666666666), np.float64(87.5), np.float64(83.33333333333334), np.float64(89.47368421052632), np.float64(85.71428571428571), np.float64(76.0), np.float64(87.5), np.float64(83.33333333333334), np.float64(90.0), np.float64(66.66666666666666), np.float64(88.88888888888889), np.float64(80.0), np.float64(100.0), np.float64(75.0), np.float64(76.47058823529412), np.float64(84.21052631578947), np.float64(89.47368421052632), np.float64(83.33333333333334), np.float64(88.23529411764706), np.float64(100.0), np.float64(80.0), np.float64(82.14285714285714), np.float64(94.11764705882352), np.float64(86.36363636363636), np.float64(88.88888888888889), np.float64(90.0), np.float64(86.66666666666667), np.float64(84.21052631578947), np.float64(87.5), np.float64(86.66666666666667), np.float64(80.0), np.float64(71.42857142857143), np.float64(86.20689655172413), np.float64(69.56521739130434), np.float64(80.0), np.float64(80.95238095238095), np.float64(86.36363636363636), np.float64(86.36363636363636), np.float64(94.44444444444444), np.float64(83.33333333333334), np.float64(86.95652173913044), np.float64(90.47619047619048), np.float64(78.94736842105263), np.float64(88.23529411764706), np.float64(80.0), np.float64(68.42105263157895), np.float64(90.0), np.float64(90.0), np.float64(75.0), np.float64(76.47058823529412), np.float64(88.88888888888889), np.float64(87.5), np.float64(83.33333333333334), np.float64(76.19047619047619), np.float64(80.0), np.float64(84.21052631578947), np.float64(82.6086956521739), np.float64(94.44444444444444), np.float64(87.5), np.float64(70.0), np.float64(66.66666666666666), np.float64(79.16666666666666), np.float64(95.23809523809523), np.float64(84.0), np.float64(83.33333333333334), np.float64(71.42857142857143), np.float64(94.73684210526315), np.float64(88.88888888888889), np.float64(76.47058823529412), np.float64(85.71428571428571), np.float64(80.95238095238095), np.float64(79.16666666666666), np.float64(73.91304347826086), np.float64(88.88888888888889), np.float64(68.18181818181817)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
+    "# # process3 = Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 3, 0.01, 'ver1'))\n",
+    "list_ =         sc_calc_acc_condition_with_temp_with_sc('l', 4, 30, 'Y', 100, 'sys_prompt8', 5,  0.01, 'ver2')\n",
+    "print(list_)\n",
+    "# 그래프 그려서 넣어두기... 분포...."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.750     0.938     0.833        16\n",
+      "           1      0.861     0.838     0.849        37\n",
+      "           2      0.667     0.333     0.444         6\n",
+      "\n",
+      "    accuracy                          0.814        59\n",
+      "   macro avg      0.759     0.703     0.709        59\n",
+      "weighted avg      0.811     0.814     0.804        59\n",
+      "\n",
+      "l_result_4_10_Y :  81.35593220338984\n",
+      "[np.float64(80.0), np.float64(66.66666666666666), np.float64(100.0), np.float64(66.66666666666666), np.float64(71.42857142857143), np.float64(100.0), np.float64(100.0), np.float64(71.42857142857143), np.float64(75.0), np.float64(83.33333333333334)]\n"
+     ]
+    }
+   ],
    "source": [
     "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
-    "sc_calc_acc_condition_with_temp_with_sc('v', 4, 10, 'Y', 10, 'sys_prompt8', 5,  0.01, 'ver5')"
+    "list_ =       sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver4')\n",
+    "print(list_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(acc_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
-    "# # process3 = Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 3, 0.01, 'ver1'))\n",
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 30, 'Y', 100, 'sys_prompt8', 5,  0.01, 'ver2')\n",
-    "# 그래프 그려서 넣어두기... 분포...."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver4')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.947     0.857     0.900        21\n",
+      "           1      0.795     0.969     0.873        32\n",
+      "           2      1.000     0.500     0.667        10\n",
+      "\n",
+      "    accuracy                          0.857        63\n",
+      "   macro avg      0.914     0.775     0.813        63\n",
+      "weighted avg      0.878     0.857     0.849        63\n",
+      "\n",
+      "l_result_4_10_Y :  85.71428571428571\n",
+      "[np.float64(100.0), np.float64(100.0), np.float64(60.0), np.float64(100.0), np.float64(83.33333333333334), np.float64(75.0), np.float64(60.0), np.float64(85.71428571428571), np.float64(71.42857142857143), np.float64(100.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver1')"
+    "list_ =     sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver1')\n",
+    "print(list_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.963     0.929     0.945        28\n",
+      "           1      0.867     0.963     0.912        27\n",
+      "           2      1.000     0.667     0.800         6\n",
+      "\n",
+      "    accuracy                          0.918        61\n",
+      "   macro avg      0.943     0.853     0.886        61\n",
+      "weighted avg      0.924     0.918     0.916        61\n",
+      "\n",
+      "l_result_4_10_Y :  91.80327868852459\n",
+      "[np.float64(100.0), np.float64(100.0), np.float64(87.5), np.float64(85.71428571428571), np.float64(100.0), np.float64(100.0), np.float64(90.0), np.float64(80.0), np.float64(100.0), np.float64(66.66666666666666)]\n",
+      "90.98809523809524\n"
+     ]
+    }
+   ],
    "source": [
     "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver5')"
+    "list_ =     sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver5')\n",
+    "print(list_)\n",
+    "print(np.mean(list_))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc_calc_acc_condition_with_temp_with_sc('v', 4, 10, 'Y', 10, 'sys_prompt8', 5,  0.01, 'ver5')\n",
-    "# 그래프 그려서 넣어두기... 분포...."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0      0.947     0.857     0.900        21\n",
+      "           1      0.795     0.969     0.873        32\n",
+      "           2      1.000     0.500     0.667        10\n",
+      "\n",
+      "    accuracy                          0.857        63\n",
+      "   macro avg      0.914     0.775     0.813        63\n",
+      "weighted avg      0.878     0.857     0.849        63\n",
+      "\n",
+      "l_result_4_10_Y :  85.71428571428571\n",
+      "[np.float64(100.0), np.float64(100.0), np.float64(60.0), np.float64(100.0), np.float64(83.33333333333334), np.float64(75.0), np.float64(60.0), np.float64(85.71428571428571), np.float64(71.42857142857143), np.float64(100.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver1')"
+    "list_ =    sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver1') \n",
+    "print(list_)"
    ]
   },
   {
@@ -171,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.mean(acc_list)"
+    "np.mean(list_)"
    ]
   },
   {
@@ -184,7 +258,7 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.hist(acc_list\n",
+    "ax.hist(list_\n",
     "    ,  color = 'lightgray'\n",
     "    # ,  edgecolor = 'black'\n",
     "      ) # hist type\n",
@@ -199,11 +273,11 @@
     "ax.set_ylabel(\"# of test\", # add y-axis label\n",
     "              fontsize = 12.5)\n",
     "\n",
-    "ax.axvline(np.mean(acc_list), # add vertical line\n",
+    "ax.axvline(np.mean(list_), # add vertical line\n",
     "           color = 'blue',\n",
     "           linestyle = '--',\n",
     "           linewidth = 1.5)\n",
-    "fig.text(0.35, 0.82, color = 'blue', fontsize = 10,  s='Mean: ' + str(round(np.mean(acc_list), 2))) #\n",
+    "fig.text(0.35, 0.82, color = 'blue', fontsize = 10,  s='Mean: ' + str(round(np.mean(list_), 2))) #\n",
     "\n",
     "\n",
     "plt.show();\n"
