--- a/complexity/0_data_extract.ipynb
+++ b/complexity/0_data_extract.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "import pprint\n",
     "from itertools import combinations\n",
     "import pickle\n",
-    "import config.config as conf"
+    "import config.config as conf\n"
    ]
   },
   {
