--- a/submission/Result_Figure13.ipynb
+++ b/submission/Result_Figure13.ipynb
@@ -2265,7 +2265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2279,7 +2279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
