--- a/submission/C_Result_Fig3_1.ipynb
+++ b/submission/C_Result_Fig3_1.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "c55c6c5e",
    "metadata": {},
    "outputs": [
@@ -393,6 +393,7 @@
     "fig, axs = plt.subplots(1, 3, figsize = (18, 6), sharey=True, sharex=True, constrained_layout=True)\n",
     "\n",
     "coef_dict = t_coef_dict[1]\n",
+    "[1]\n",
     "for v_idx in coef_dict.keys():\n",
     "    list_ = coef_dict[v_idx]\n",
     "    x_rel, divider = get_dist_x_div(list_)\n",
@@ -435,7 +436,7 @@
     "    frameon=False\n",
     ")\n",
     "\n",
-    "plt.savefig(f\"{output_dir}Result_Fig3.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f\"{output_dir}C_Result_Fig3_1.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show();\n"
    ]
   },
@@ -524,16 +525,7 @@
    "execution_count": null,
    "id": "b9930850",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1099, 2)\n",
-      "(1099, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -541,81 +533,7 @@
    "execution_count": null,
    "id": "e3284b1a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cdate</th>\n",
-       "      <th>gini</th>\n",
-       "      <th>entropy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-11-30</td>\n",
-       "      <td>0.679385</td>\n",
-       "      <td>6.679751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-12-01</td>\n",
-       "      <td>0.683089</td>\n",
-       "      <td>6.713969</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-12-02</td>\n",
-       "      <td>0.685342</td>\n",
-       "      <td>6.718752</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-12-03</td>\n",
-       "      <td>0.689771</td>\n",
-       "      <td>6.750750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-12-04</td>\n",
-       "      <td>0.679014</td>\n",
-       "      <td>6.733105</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        cdate      gini   entropy\n",
-       "0  2020-11-30  0.679385  6.679751\n",
-       "1  2020-12-01  0.683089  6.713969\n",
-       "2  2020-12-02  0.685342  6.718752\n",
-       "3  2020-12-03  0.689771  6.750750\n",
-       "4  2020-12-04  0.679014  6.733105"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -655,93 +573,7 @@
    "execution_count": null,
    "id": "582be86d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cdate</th>\n",
-       "      <th>gini</th>\n",
-       "      <th>entropy</th>\n",
-       "      <th>post_std_diff</th>\n",
-       "      <th>pre_std_diff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-11-30</td>\n",
-       "      <td>0.679385</td>\n",
-       "      <td>6.679751</td>\n",
-       "      <td>-730</td>\n",
-       "      <td>-366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-12-01</td>\n",
-       "      <td>0.683089</td>\n",
-       "      <td>6.713969</td>\n",
-       "      <td>-729</td>\n",
-       "      <td>-365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-12-02</td>\n",
-       "      <td>0.685342</td>\n",
-       "      <td>6.718752</td>\n",
-       "      <td>-728</td>\n",
-       "      <td>-364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-12-03</td>\n",
-       "      <td>0.689771</td>\n",
-       "      <td>6.750750</td>\n",
-       "      <td>-727</td>\n",
-       "      <td>-363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-12-04</td>\n",
-       "      <td>0.679014</td>\n",
-       "      <td>6.733105</td>\n",
-       "      <td>-726</td>\n",
-       "      <td>-362</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       cdate      gini   entropy  post_std_diff  pre_std_diff\n",
-       "0 2020-11-30  0.679385  6.679751           -730          -366\n",
-       "1 2020-12-01  0.683089  6.713969           -729          -365\n",
-       "2 2020-12-02  0.685342  6.718752           -728          -364\n",
-       "3 2020-12-03  0.689771  6.750750           -727          -363\n",
-       "4 2020-12-04  0.679014  6.733105           -726          -362"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -773,18 +605,7 @@
    "execution_count": null,
    "id": "d9c20b09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-08-17 00:00:00\n",
-      "2023-03-14 00:00:00\n",
-      "2021-08-18 00:00:00\n",
-      "2022-03-15 00:00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -816,16 +637,7 @@
    "execution_count": null,
    "id": "22741a3f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-15.0\n",
-      "14.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
