--- a/submission/C_Result_Fig4_3.ipynb
+++ b/submission/C_Result_Fig4_3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,7 @@
     "sys.path.insert(1, p)\n",
     "sys.path.insert(1, pp)\n",
     "sys.path.insert(1, ppp)\n",
+    "\n",
     "\n"
    ]
   },
@@ -2173,16 +2174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title_dict = {'High' : 'High Salary Growth Rate', 'Mid' :  'Mid Salary Growth Rate' , 'Low' :  'Low Salary Growth Rate'}"
+    "title_dict = {'High' : 'Top5 Salary Growth Rate', 'Mid' :  'Mid Salary Growth Rate' , 'Low' :  'Bottom5 Salary Growth Rate'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2292,7 @@
     "    frameon=False,\n",
     "    fontsize=9\n",
     ")\n",
-    "plt.savefig(f\"{output_dir}Result_Fig13_1.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f\"{output_dir}C_Result_Fig4_3.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()\n"
    ]
   },
