--- a/submission/C_Result_Fig4_3.ipynb
+++ b/submission/C_Result_Fig4_3.ipynb
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2271,7 @@
     "# ---------------------------------------------------------\n",
     "#  공통 라벨 + 범례 + 여백 조정\n",
     "# ---------------------------------------------------------\n",
-    "fig.supxlabel('Change in Entropy (95% CI)', fontsize=10)\n",
+    "fig.supxlabel('Changes in entropy (95% CI)', fontsize=10)\n",
     "plt.subplots_adjust(wspace=0.03)\n",
     "\n",
     "# 공통 범례 (하단 중앙)\n",
