--- a/submission/C_Result_Fig3_1.ipynb
+++ b/submission/C_Result_Fig3_1.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "74f31267",
+   "metadata": {},
+   "source": [
+    "# Tag 기준으로 계산 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e411a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a0dc1985",
@@ -370,6 +386,14 @@
    "source": [
     "draw_scatter_line_plot(t_coef_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9223f04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
