--- a/LLM/1_acc_test copy 2.ipynb
+++ b/LLM/1_acc_test copy 2.ipynb
@@ -231,6 +231,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Process\n",
+    "    \n",
+    "def task(llm_model, few_shot_n, test_n, q_src_yn, ver, p_ver, sc_num, temperature, excel_ver):\n",
+    "\n",
+    "    print(f\"Task {llm_model}_{few_shot_n}_{test_n}_{q_src_yn}_{p_ver}_{sc_num} 시작\")\n",
+    "    for i in range(ver):\n",
+    "        print(f\"Task {llm_model}_{few_shot_n}_{test_n}_{q_src_yn}_{p_ver}_{sc_num} 실행 중: {i}\")\n",
+    "        sc.Self_Consistency(   llm_model\n",
+    "                            , few_shot_n\n",
+    "                            , test_n\n",
+    "                            , q_src_yn\n",
+    "                            , ver\n",
+    "                            , p_ver\n",
+    "                            , sc_num\n",
+    "                            , temperature\n",
+    "                            , excel_ver\n",
+    "                            , i)\n",
+    "    \n",
+    "    print(f\"Task {llm_model}_{few_shot_n}_{test_n}_{q_src_yn}_{p_ver}_{sc_num} 완료\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "\n",
+    "    process3 = Process(target=task, args=('l', 1, 10, 'Y', 10, 'sys_prompt10', 3, 0.01, 'ver5'))\n",
+    "    process3.start()\n",
+    "    \n",
+    "    process3.join()\n",
+    "    print(\"모든 작업 완료\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
