--- a/submission/C_Result_Fig2_1.ipynb
+++ b/submission/C_Result_Fig2_1.ipynb
@@ -6852,7 +6852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6937,7 +6937,7 @@
     "reg_af_ci_lower = reg_af_summary[\"mean_ci_lower\"]\n",
     "reg_af_ci_upper = reg_af_summary[\"mean_ci_upper\"]\n",
     "\n",
-    "p_value_txt = '($p < 0.001$)' if p_value_0 <0.001 else '($p = {p_value_0:.3f}$)'\n",
+    "p_value_txt = '($p < 0.001$)' if p_value_0 <0.001 else f'($p = {p_value_0:.3f}$)'\n",
     "\n",
     "axs[idx].scatter(x_rel, list_, color = 'darkgray', alpha = 0.7,  s=10, marker='x')\n",
     "axs[idx].axvline(x=0, color='tab:red', linestyle='-.', linewidth=1)\n",
