--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -2799,7 +2799,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2813,7 +2813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
